--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "MEBonham <programmer@mckaybonham.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.4",
     "knex": "^0.15.2",
     "sqlite3": "^4.0.3"
   },
